JSR305 -> JSpecify
With the help of "package-info.java" files, now
* all Selenide parameters and return values are not-nullable by default;
* all Selenide methods are annotated by @CheckReturnValue by default.

Also, I introduced `FluentCommand` class for all commands returning the same `SelenideElement`. This was an easy way to make their `execute` method non-nullable.